Koenig - Fix whitespace above/below cards

--- a/ghost/admin/app/styles/components/koenig.css
+++ b/ghost/admin/app/styles/components/koenig.css
@@ -453,6 +453,11 @@ textarea.koenig-card-markdown {
  * Cards
  */
 
+.__mobiledoc-card {
+    display: inline-block;
+    width: 100%;
+    margin: 0 0 1.7em 0; /* match P margin */
+}
 
 /**
  * Tooltips
